--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,7 +16,8 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"extract-colors": "^4.2.1"
+		"extract-colors": "^4.2.1",
+		"get-pixels": "^3.3.3"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -24,6 +25,7 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/get-pixels": "^3.3.4",
 		"@types/node": "^24",
 		"@vitest/browser-playwright": "^4.0.15",
 		"eslint": "^9.39.1",
