--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,6 +7,9 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
+		"cap:sync": "npm run build && npx cap sync",
+		"cap:android": "npm run cap:sync && npx cap open android",
+		"cap:ios": "npm run cap:sync && npx cap open ios",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -16,10 +19,14 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@capacitor/cli": "^8.0.2",
+		"@capacitor/core": "^8.0.2",
 		"extract-colors": "^4.2.1",
 		"get-pixels": "^3.3.3"
 	},
 	"devDependencies": {
+		"@capacitor/android": "^8.0.2",
+		"@capacitor/ios": "^8.0.2",
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-auto": "^7.0.0",
